[WFCORE-7211] Do not set the -Djava.security.manager=allow by default. Only add the property if -secmgr is passed.
Small fix to property destroy the processes for the script tests.

https://issues.redhat.com/browse/WFCORE-7211
Signed-off-by: James R. Perkins <jperkins@redhat.com>